# astartes

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example_usage.py  paper.bib  paper.md  postBuild  pyproject.toml  requirements.txt  setup.py  sklearn_to_astartes.md  start_project.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  new_feature.md
.github/workflows/: check_pypi_build.yml  ci.yml  coverage_helper.py  coverage_reject.yml  format_code.yml  gen_docs.yml  ipynb_ci.yml  joss_paper_ci.yml  publish_packages.yml  publish_to_pypi.yml  reproduce_paper.yml  run_tests.yml  run_tests_tests.yml  run_unix_tests.yml  update_jors_branch.yml  update_joss_branch.yml
astartes/: __init__.py  astartes.py  exceptions.py  main.py  molecules.py
astartes/interfaces/: __init__.py  train_test_split_images.py  train_test_split_molecules.py
astartes/samplers/: __init__.py  abstract_sampler.py  abstract_supervised_sampler.py  abstract_unsupervised_sampler.py  kennard_stone.py  kennardstone.py  random.py  random_split.py  sampler.py  sampler_factory.py
astartes/utils/: __init__.py  aimsim_featurizer.py  array_type_helpers.py  convert_to_array.py  exceptions.py  fast_kennard_stone.py  matrix_ops.py  sampler_factory.py  user_utils.py  utils.py  warnings.py
blankpythonproject/: __init__.py
docs/: CONTRIBUTING.doctree  CONTRIBUTING.html  CONTRIBUTING.rst  README.doctree  README.html  README.rst  astartes.doctree  astartes.html  astartes.interfaces.doctree  astartes.interfaces.html  astartes.interfaces.rst  astartes.rst  astartes.samplers.doctree  astartes.samplers.extrapolation.doctree  astartes.samplers.extrapolation.html  astartes.samplers.html  astartes.samplers.interpolation.doctree  astartes.samplers.interpolation.html  astartes.samplers.interpolation.rst  astartes.samplers.rst  astartes.utils.doctree  astartes.utils.html  astartes.utils.rst  blankpythonproject.doctree  blankpythonproject.html  blankpythonproject.samplers.doctree  blankpythonproject.samplers.html  blankpythonproject.utils.doctree  blankpythonproject.utils.html  blankpythonproject.utils.rst  conf.py  environment.pickle  example_usage.doctree  example_usage.html  genindex.html  index.doctree  index.html  index.rst  modules.doctree  modules.html  (+38 more)
docs/_sources/: CONTRIBUTING.rst.txt  README.rst.txt  astartes.rst.txt  astartes.samplers.extrapolation.rst.txt  astartes.samplers.rst.txt  blankpythonproject.rst.txt  blankpythonproject.samplers.rst.txt  example_usage.rst.txt  index.rst.txt  modules.rst.txt  start_project.rst.txt  test.regression.rst.txt  test.rst.txt  test.unit.rst.txt  test.unit.samplers.extrapolative.rst.txt  test.unit.samplers.interpolative.rst.txt
examples/: QM9_make_splits.ipynb  RDB7_barrier_prediction_example.ipynb  RDB7_make_splits.ipynb  README.md  blankpythonproject_example.ipynb  burger-king-menu.csv  publication_environment.yml  split_comparisons.ipynb  train_val_test_split_example.ipynb  validate_splits.py
examples/RDB7_splits/: RDB7_splits_kmeans.pkl  RDB7_splits_scaffold.pkl
examples/barrier_prediction_with_RDB7/: RDB7_barrier_prediction_example.ipynb  ccsdtf12_dz.csv
examples/mlpds_2023_astartes_demonstration/: alkanes.csv  iupac_and_boiling.csv  mlpds_2023_demo.ipynb
examples/morais_lima_martin_sampling/: mlm_sampler.ipynb
examples/reproduce_paper_splits/: QM9_make_splits.ipynb  RDB7_make_splits.ipynb  validate_splits.py
test/: test_astartes.py  test_blankpythonproject.py  test_extended_train_test_split.py  test_molecules.py
test/data/: __init__.py  (+1 more)
(+78 files in other folders)
