[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "astartes"
version = "1.0.0rc1"
authors = [
    { name = "Jackson Burns", email = "jwburns@mit.edu" },
    { name = "Himaghna Bhattacharjee", email = "himaghna@udel.edu" },
    { name = "Kevin Spiekermann", email = "kspieker@mit.edu" },
]
license = { text = "MIT" }
description = "Train:Test Algorithmic Sampling for Molecules and Arbitrary Arrays"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = { Homepage = "https://github.com/JacksonBurns/astartes" }
requires-python = ">=3.7"
dependencies = ["kennard_stone", "scikit_learn", "numpy", "scipy"]

[project.optional-dependencies]
molecules = ["aimsim"]
dev = ["black", "isort", "pytest"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["astartes*"]
exclude = ["docs*", "examples*", "test*"]
