[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "astartes"
dynamic = ["version"]
authors = [
    { name = "Jackson Burns", email = "jwburns@mit.edu" },
    { name = "Himaghna Bhattacharjee", email = "himaghna@udel.edu" },
    { name = "Kevin Spiekermann", email = "kspieker@mit.edu" },
]
license = { text = "MIT" }
description = "Train:Test Algorithmic Sampling for Molecules and Arbitrary Arrays"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = { Homepage = "https://github.com/JacksonBurns/astartes" }
requires-python = ">=3.8"
dependencies = ["scikit_learn", "tabulate", "numpy", "scipy", "pandas"]

[project.optional-dependencies]
molecules = ["aimsim"]
dev = ["black", "isort", "pytest"]
demos = ["plotly", "tabulate", "py2opsin", "kaleido"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["astartes*"]
exclude = ["docs*", "examples*", "test*"]

[tool.setuptools.dynamic]
version = {attr = "astartes.__version__"}
